--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "~4.16.0",
     "express-jwt": "^5.3.1",
     "express-validator": "^6.2.0",
+    "jsdoc": "^3.6.5",
+    "jsdoc-http-plugin": "^0.3.2",
     "jsonwebtoken": "^8.5.1",
     "mocha-lcov-reporter": "^1.3.0",
     "moment": "^2.24.0",
@@ -33,5 +35,6 @@
     "mocha": "^6.2.2",
     "nodemon": "^1.19.4",
     "nyc": "^14.1.1"
-  }
+  },
+  "doc": "jsdoc -d docs --configure jdoc.conf app.js"
 }
