--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "moment": "^2.24.0",
     "mongoose": "^5.7.6",
     "morgan": "~1.9.0",
-    "nodemailer": "^6.3.1"
+    "nodemailer": "^6.3.1",
+    "twilio": "^3.49.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
