--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "doc": "jsdoc -d docs --configure jsdoc.conf app.js"
   },
   "dependencies": {
+    "authy": "^1.4.0",
     "bcrypt": "^5.0.0",
     "codacy-coverage": "^3.4.0",
     "cookie-parser": "~1.4.3",
