--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^5.7.6",
     "morgan": "~1.9.0",
     "nodemailer": "^6.3.1",
+    "otplib": "^12.0.1",
     "twilio": "^3.49.0"
   },
   "devDependencies": {
