--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
+    "build":"tsc",
     "test": "nyc _mocha --timeout 10000 --exit --report lcovonly -- -R spec",
     "lint": "eslint --fix --config .eslintrc.json \"**/*.js\"",
     "doc": "jsdoc -d docs --configure jsdoc.conf app.js"
   },
   "dependencies": {
+    "@types/express": "^4.17.8",
+    "@types/node": "^14.6.4",
     "authy": "^1.4.0",
     "bcrypt": "^5.0.0",
     "codacy-coverage": "^3.4.0",
