--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "watch-ts": "tsc -w",
+    "watch-node": "nodemon dist/app.js",
     "dev": "nodemon ./bin/www",
     "build":"tsc",
     "test": "nyc _mocha --timeout 10000 --exit --report lcovonly -- -R spec",
