--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build":"tsc",
     "test": "nyc _mocha --timeout 10000 --exit --report lcovonly -- -R spec",
     "lint": "eslint --fix --config .eslintrc.json \"**/*.js\"",
-    "doc": "jsdoc -d docs --configure jsdoc.conf app.js"
+    "docs": "jsdoc -d docs --configure jsdoc.conf dist/app.js",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript, Node\" -c \"yello.bold, cyan.bold\" \"yarn run watch-ts\" \"yarn run watch-node\""
   },
   "dependencies": {
     "@types/express": "^4.17.8",
