chore:typescript code setup

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "watch-ts": "tsc -w",
     "watch-node": "nodemon dist/app.js",
     "dev": "nodemon ./bin/www",
-    "build":"tsc",
+    "build": "tsc",
     "test": "nyc _mocha --timeout 10000 --exit --report lcovonly -- -R spec",
     "lint": "eslint --fix --config .eslintrc.json \"**/*.js\"",
     "docs": "jsdoc -d docs --configure jsdoc.conf dist/app.js",
@@ -19,6 +19,7 @@
     "authy": "^1.4.0",
     "bcrypt": "^5.0.0",
     "codacy-coverage": "^3.4.0",
+    "concurrently": "^5.3.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
