chore:added typings for mongoose, script implementation

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "test": "nyc _mocha --timeout 10000 --exit --report lcovonly -- -R spec",
     "lint": "eslint --fix --config .eslintrc.json \"**/*.js\"",
     "docs": "jsdoc -d docs --configure jsdoc.conf dist/app.js",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript, Node\" -c \"yello.bold, cyan.bold\" \"yarn run watch-ts\" \"yarn run watch-node\""
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript, Node\" -c \"yello.bold, cyan.bold\" \"yarn run watch-ts\" \"yarn run watch-node\"",
+    "prod": "npm run build && npm run start"
   },
   "dependencies": {
     "@types/express": "^4.17.8",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^14.6.4",
     "authy": "^1.4.0",
     "bcrypt": "^5.0.0",
