--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "eslint": "^6.5.1",
     "istanbul": "^0.4.5",
     "nodemon": "^1.19.4",
-    "nyc": "^14.1.1"
+    "nyc": "^14.1.1",
+    "tsc": "^1.20150623.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.2"
   }
 }
